[project]
name = "gpt-trainer-sdk"
version = "0.2.0"
description = "The official Python library for the GPT-trainer API"
authors = ["Michael T. Chang <michael.chang@petal.org>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
markers = [
    "incur_costs: tests that incur costs via API calls",
]
addopts = [
    "-m not incur_costs",
]